sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: not found: value i
    for(j<-i to getValueCount()){
           ^AlgSelectionSort:7: error: not found: value i
      if(getValue(i)<=m){
                  ^AlgSelectionSort:10: error: not found: value i
      swap(m,i)
             ^