sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {

  var m:Int=getValue(0)
  for(j<-1 to getValueCount()){
    for(j<-i to getValueCount()){
      if(getValue(i)<=m){
        m=getValue(j)
      }
      swap(m,i)
    }
  }
}
